<resources>
    <string name="app_name">Signup</string>
    <string name="signup">SIGNUP</string>
    <string name="edit_name">Name</string>
    <string name="edit_email">Email</string>
    <string name="edit_phone">Phone No.</string>
    <string name="edit_age">"Age "</string>
    <string name="edit_gender">"Gender (M/F) "</string>
    <string name="edit_occupation">Occupation</string>
    <string name="edit_organization">Organization</string>
    <string name="edit_city">City</string>
    <string name="edit_state">State</string>
    <string name="edit_country">Country</string>
    <string name="add_button">REGISTER</string>
</resources>
